Spacing fixes: home page components

--- a/blocks/feature/feature.css
+++ b/blocks/feature/feature.css
@@ -4,7 +4,7 @@
   display: flex;
   margin: auto;
   margin-bottom: 18px;
-  padding: 36px 0 9px;
+  margin: 36px 0 9px;
 }
 
 .feature-wrapper .about-us-stats:not(:last-child) {
@@ -159,6 +159,9 @@
 .about-us-stats .about-us-right-content.text-container p{
 color: var(--body-text-color);
 }
+.about-us-stats .about-us-right-content.text-container:last-child {
+  margin-bottom: 0;
+}
 
 .about-us-left a.button {
   background: none;
@@ -198,8 +201,7 @@ color: var(--body-text-color);
 /* Responsive design */
 @media  (width >= 768px) {
   .feature-wrapper .about-us-stats{
-    margin-bottom: 0;
-    padding: 56px 0 0;
+    margin: 56px 0 0;
   }
 
   .about-us-stats .about-us-left{
@@ -288,7 +290,7 @@ color: var(--body-text-color);
 
 @media  (width >= 1024px) {
   .feature-wrapper .about-us-stats {
-    padding: 68px 0 34px;
+    margin: 34px 0;
   }
 
   .about-us-stats .about-us-left{
