--- a/blocks/listing/listing.css
+++ b/blocks/listing/listing.css
@@ -335,9 +335,8 @@
 
 @media (width >= 993px) {
   .listing-wrapper .container:not(.without-images) {
-    margin-top: 34px;
-    margin-bottom: 34px; 
-    padding-top: 20px;
+    margin-top: 45px;
+    margin-bottom: 45px; 
   }
 
   .listing-wrapper .listing [data-aue-prop="title"], .listing-wrapper .listing [data-gen-prop="title"] {
